# pavise-pact22-artifact

./: .gitignore  CNAME  Makefile  README.md  repro.sh  setup.sh
apps-no_pavise/memcached-pmem/: Makefile  config.status  configure  configure.ac  gdb.txt  omemcached  pslab.c  user.mk
apps-no_pavise/memcached-pmem/.deps/: cache.Po  memcached-assoc.Po  memcached-bipbuffer.Po  memcached-cache.Po  memcached-crawler.Po  memcached-daemon.Po  memcached-hash.Po  memcached-items.Po  memcached-itoa_ljust.Po  memcached-jenkins_hash.Po  memcached-logger.Po  memcached-memcached.Po  memcached-murmur3_hash.Po  memcached-pslab.Po  memcached-slab_automove.Po  memcached-slabs.Po  memcached-stats.Po  memcached-thread.Po  memcached-util.Po  memcached_debug-assoc.Po  memcached_debug-bipbuffer.Po  memcached_debug-cache.Po  memcached_debug-crawler.Po  memcached_debug-daemon.Po  memcached_debug-hash.Po  memcached_debug-items.Po  memcached_debug-itoa_ljust.Po  memcached_debug-jenkins_hash.Po  memcached_debug-logger.Po  memcached_debug-memcached.Po  memcached_debug-murmur3_hash.Po  memcached_debug-pslab.Po  memcached_debug-slab_automove.Po  memcached_debug-slabs.Po  memcached_debug-stats.Po  memcached_debug-thread.Po  memcached_debug-util.Po  sizes.Po  testapp.Po  timedrun.Po  (+1 more)
apps-no_pavise/memcached-pmem/autom4te.cache/: requests  traces.1
apps-no_pavise/memcached-pmem/doc/: Makefile
apps-no_pavise/mod-single-repo/libmemcached-1.0.18/: Makefile  aminclude.am  libtool
apps-no_pavise/mod-single-repo/memcached-pmdk/: CMakeLists-tx.txt  CMakeLists.txt  compile.sh  map-notx.hpp  map.hpp  memcached.c  memcached.h  new_assoc.cpp  thread.c
apps-no_pavise/mod-single-repo/vacation-pmdk/hashmap_test/: CMakeLists.txt
apps-no_pavise/redis/: .gitignore  redis.conf
apps/memcached-pavise/: Makefile  Makefile.am  Makefile.in  config.status  crawler.c  gdb.txt  gdbr.txt  gdbs.txt  implog_memcachedlenovo  implog_memcachedlenovodebug  items.c  makelog  memcached.h  nimplog_memcachedlenovo  nimplog_memcachedlenovodebug  nimplog_memcachedlenovorel  omemcached_clang  omemcached_gcc  pmdklog  slabs.c  test  thread.c  user.mk
apps/mod-pavise/memcached-pmdk/: CMakeLists.txt  assoc.h  compile.sh  items.c  items.h  makelog  memcached.c  memcached.h  new_assoc.cpp  run.sh  slabs.c  source.sh  thread.c
apps/mod-pavise/memcached-pmdk/notx-build/: CMakeCache.txt  Makefile  cmake_install.cmake  memcached
apps/mod-pavise/vacation-pmdk/persistent_map_test/: CMakeLists.txt
apps/redis/: gdbreal.txt  redis.conf  ut-file
apps/redis/src/: Makefile  (+4 more)
include/: pavise.hpp  pavise_interface.h  pavise_memcpy_nt_sse2.h  pavise_memops.h
isa-l/: .gitignore
llvm/: llvmlog  llvmlog_template
pmdk-1.10/: .gitignore  user.mk
pmdk-1.10/src/: Makefile.inc  common.inc
redis/: Nimplog_redis  cscope.files  cscope.out  gdb.txt  gdbshadow.txt  implog_redis  nimplog_redis  oredis110  tags
redis/src/: cscope.files  cscope.out  gdbreal.txt  server.h
results/: collect.sh
src/: pavise.cpp  pavise.cppold  pavise_interface.cpp  pavise_memops.c
src/pintool/: pintool.cpp  pintool_count.cpp  pintool_funcvisit.cpp  pintool_mismatchdebug.cpp  pintool_pavise.cpp  pintool_pmfootprint.cpp  pintool_pmrw.cpp  pintool_pmrwv2.cpp  pintool_printstore.cpp  pintool_printuseful.cpp
(+962 files in other folders)
