cmake_minimum_required(VERSION 3.10)
add_custom_target(immer_memcached  COMMENT "Builds memcached")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLOGGING_ON")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=pavisehello")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=pavisehello")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=pavisenoload")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=pavisenoload")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=paviseimpload")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H -O2 -ggdb -mclflushopt -lpthread -DTX -fexperimental-new-pass-manager -pavise=paviseimpload")
set(VALGRIND "../pmem-valgrind/")
set(PMDK "../pmdk/src/")
link_directories(${PMDK}/tx-nondebug /home/nvm-admin/pavise/build/lib)
add_executable(memcached new_assoc.cpp items.c memcached.c thread.c)
target_include_directories(memcached PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${VALGRIND}/lackey ${VALGRIND}/include ${PMDK}/include ${PMDK}/examples/libpmemobj/hashmap/ "../libpmemobj-cpp/include/" /home/nvm-admin/pavise/include)
target_link_libraries(memcached PUBLIC event pthread pmem pmemobj hashmap_tx pavise_interface)
